@@ -209,6 +209,7 @@ $config = Zend_Registry::get('config');
     				<ul class="dropdown-menu">
     				    <li><a href="user"><i class="icon-user"></i>&nbsp;Users</a></li>
     				    <li><a href="group"><i class="icon-briefcase"></i>&nbsp;Groups</a></li>
+				    <li><a href="permissions"><i class="icon-eye-open"></i>&nbsp;Permissions</a></li>
     				</ul>
     			    </li>
     			</ul>
