@@ -13,7 +13,6 @@
 	<ul class="nav nav-tabs">
 	    <li class="active"><a data-toggle="tab" href="#tab-user">User</a></li>
 	    <li><a data-toggle="tab" href="#tab-member">Member Of</a></li>
-	    <li><a data-toggle="tab" href="#tab-permission">Permissions</a></li>
 	</ul>
 	<div class="tab-content">
 	    <div class="tab-pane active" id="tab-user">
@@ -77,15 +76,13 @@
 		    <label class="control-label" for="active">Active</label>
 		    <div class="controls">
 			<select name="active" id="active">
-			    <option>Yes</option>
-			    <option>No</option>
+			    <option value="1"<?= ((!is_null($this->active) && $this->active) ? ' selected="selected"' : '') ?>>Yes</option>
+			    <option value="0"<?= ((!is_null($this->active) && !$this->active) ? ' selected="selected"' : '') ?>>No</option>
 			</select>
 		    </div>
 		</div>
 	    </div>
 	    <div class="tab-pane" id="tab-member">
-	    </div>
-	    <div class="tab-pane" id="tab-permission">
 	    </div>
 	</div>
 
